modified:   index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="header">
             <h1>LAN NGUYEN</h1>
             <div class="contact-info">
-                <span>📍 1309 Leigh Cir, Yukon, OK 73099</span>
+                <span>📍 Yukon, OK</span>
                 <span>📱 (405) 740-4120</span>
                 <span>✉️ lannguyensh@gmail.com</span>
             </div>
