modified:   index.html

--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
                 <h2 class="section-title">Skills</h2>
                 <div class="skills-container">
                     <div class="skill-badge">Bilingual: English & Vietnamese</div>
-                    <div class="skill-badge">EHR Systems</div>
-                    <div class="skill-badge">Coding & Billing</div>
+                    <div class="skill-badge">EHR, Coding & Billing</div>
                     <div class="skill-badge">Practice Management</div>
                 </div>
             </div>
